# bio_ik

./: CMakeLists.txt  bio_ik_kinematics_description.xml  package.xml
include/bio_ik/: bio_ik_plugin.hpp  compiler.h  forward_kinematics.h  frame.h  goal_types.h  ik_base.h  ik_parallel.h  problem.h  robot_info.h  utils.h
src/: bio_ik_plugin.cpp  goal_types.cpp  ik_cppoptlib.cpp  ik_evolution_2.cpp  ik_gradient.cpp  ik_neural.cpp  ik_test.cpp
test/: utest.cpp
