<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

    <name>bio_ik</name>
    <version>1.0.0</version>
    <description>BioIK for ROS</description>
    <license>BSD</license>

    <author email="0ruppel@informatik.uni-hamburg.de">Philipp Sebastian Ruppel</author>

    <maintainer email="0ruppel@informatik.uni-hamburg.de">Philipp Sebastian Ruppel</maintainer>
    <maintainer email="me@v4hn.de">Michael Goerner</maintainer>


    <buildtool_depend>ament_cmake</buildtool_depend>

    <build_depend>moveit_core</build_depend>
    <exec_depend>moveit_core</exec_depend>

    <build_depend>pluginlib</build_depend>
    <exec_depend>pluginlib</exec_depend>

    <build_depend>eigen</build_depend>
    <exec_depend>eigen</exec_depend>

    <build_depend>moveit_ros_planning</build_depend>
    <exec_depend>moveit_ros_planning</exec_depend>

    <build_depend>tf2</build_depend>
    <exec_depend>tf2</exec_depend>

    <build_depend>tf2_eigen</build_depend>
    <exec_depend>tf2_eigen</exec_depend>
    <build_depend>tf2_kdl</build_depend>
    <exec_depend>tf2_kdl</exec_depend>
    <build_depend>tf2_geometry_msgs</build_depend>
    <exec_depend>tf2_geometry_msgs</exec_depend>

    <export>
        <build_type>ament_cmake</build_type>
        <moveit_core plugin="${prefix}/bio_ik_kinematics_description.xml"/>
    </export>

</package>
